--- a/javascript/css/funcoes.css
+++ b/javascript/css/funcoes.css
@@ -1,6 +1,6 @@
-*
-{
-	box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
 }
 
 html {
@@ -45,14 +45,20 @@ button {
     width: 10rem;
     padding: 1rem 2rem;
     cursor: pointer;
+    margin-bottom: 0;
 }
 
 button:hover {
     background-color: #4545c2;
 }
 
+.mensagem,
 #resultado {
     font-size: 2rem;
     text-align: center;
     padding: 2rem;
+}
+
+.erro {
+    border-color: #f00;
 }
