--- a/prontocloud/css/styles.css
+++ b/prontocloud/css/styles.css
@@ -1,3 +1,4 @@
+
 html {
     font-size: 62.5%;
 }
@@ -9,16 +10,16 @@ body {
 
 .main-container {
     display: block;
-    width: 100vw;
+    width: 100%;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .container {
     display: block;
-    float: left;
-    padding: 20px;
-    max-width: 100%;
+    padding: 0;
     margin: 0 auto;
+    width: 98%;
     max-width: 1198px;
 }
 
@@ -26,7 +27,7 @@ header {
     background: #fff;
     display: block;
     float: left;
-    padding: 20px;
+    padding: 20px 0;
     width: 100%;
     border-bottom: 1px solid #254159;
 }
@@ -35,6 +36,7 @@ h1 {
     font-size: 2.4rem;
     color: #254159;
     margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 h2 {
@@ -69,7 +71,7 @@ img {
 }
 
 #tenho-interesse {
-    background-color: #b8c8d6;
+    background-color: #fff;
     width: 100%;
 }
 
@@ -97,8 +99,8 @@ section {
     background-color: #fff;
     display: block;
     float: left;
-    font-size: 1.5rem; /* equivalente a 15px */ 
-    padding: 20px;
+    font-size: 1.5rem; 
+    padding: 20px 0;
     width: 100%;
 }
 
@@ -166,4 +168,83 @@ footer small {
         padding-left: 1%;
         padding-right: 1%;
     }
+}
+
+#banner {
+    background-image: url('../images/banner.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100vw;
+    height: 60vh;
+}
+
+.legend-container {
+     width: 30vw;
+      float: right;
+    margin: 10vh 10vh 0 0;
+}
+
+.legend {
+    background-color: rgba(255, 255, 255, .6);
+    padding: 20px;
+    border-radius: 5px;
+    margin-bottom: 5rem;
+}
+
+.legend h5,
+.legend h4 {
+    color: #254159;
+    line-height: 150%;
+}
+
+.button-cta {
+    border-radius: 25px;
+    display: inline;
+    background-color: orangered;
+    color: #fff;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    box-shadow: 1px 1px 4px #454545;
+    padding: 10px 15px;
+    width: auto;
+    text-decoration: none;
+    font-weight: 300;
+    float: right;
+}
+
+#saiba-mais {
+    background-color: #eaeff3;
+    padding: 40px 0;
+}
+
+#saiba-mais p,
+#saiba-mais img {
+    width: 45%;
+    display: block;
+    float: left;
+    padding: 20px;
+}
+
+#perguntas-frequentes {
+    background-color: #b8c8d6;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+dl {
+    margin: 20px 0 ;
+}
+dt {
+    font-family: 'Open Sans';
+    font-weight: 700;
+    font-size: 1.6rem;
+    color: #254159;
+    margin-bottom: 5px;
+}
+
+dd {
+    margin-left: 20px;
+    margin-bottom: 20px;
+    font-size: 1.4rem;
 }
